--- a/FoodDiplomAlina/FoodDiplomAlina.csproj
+++ b/FoodDiplomAlina/FoodDiplomAlina.csproj
@@ -10,4 +10,8 @@
     <None Include="wwwroot\Images\food.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
